ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/clang-fuzzer/llvm/set-10/09e7fa7861996bf522c0ed07359f6c111d0c3beb.log
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:1:1: error: expected identifier or '('
/<U+0000><U+000F><U+0000><U+0000>* corpus/991201-1.c */
^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:12:21: error: expression is not assignable
struct vc vc_cons[6j++) {
                  ~~^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:12:23: error: expected ']'
struct vc vc_cons[6j++) {
                      ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:12:18: note: to match this '['
struct vc vc_cons[6j++) {
                 ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:12:23: error: expected ';' after top level declarator
struct vc vc_cons[6j++) {
                      ^
                      ;
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:17:8: error: redefinition of 'vc'
struct vc {
       ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:7:8: note: previous definition is here
struct vc {
       ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:22:21: error: expression is not assignable
struct vc vc_cons[6j++(
                  ~~^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:23:3: error: expected ']'
)       {        vc_cons[currcons].d->vc_palette) [k++] = default_red[j];
        ^
/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:22:18: note: to match this '['
struct vc vc_cons[6j++(
                 ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj -mrelax-all --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name 09e7fa7861996bf522c0ed07359f6c111d0c3beb-75e2f2.c -mrelocation-model static -mframe-pointer=all -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O0 -pedantic -w -fdebug-compilation-dir /home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/diagnostic -ferror-limit 19 -fgnuc-version=4.2.1 -faddrsig -o /tmp/09e7fa7861996bf522c0ed07359f6c111d0c3beb-75e2f2-c40d37.o -x c 09e7fa7861996bf522c0ed07359f6c111d0c3beb-75e2f2.c
1.	/home/user42/directed-compiler-fuzzing-code/scripts/8-crash-testing/input/segment_18/09e7fa7861996bf522c0ed07359f6c111d0c3beb.c:25:61: current parser token '.'
clang: error: unable to execute command: Segmentation fault (core dumped)
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/09e7fa7861996bf522c0ed07359f6c111d0c3beb-75e2f2-06e2d7.c
clang: note: diagnostic msg: /tmp/09e7fa7861996bf522c0ed07359f6c111d0c3beb-75e2f2-06e2d7.sh
clang: note: diagnostic msg: 

********************
